--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>React-Fundas</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="root">
+    <div id="root" >
         <h1>Hello World!</h1>
     </div>
-    <script src="app.js"></script>
     <script
-        crossorigin
-        src="https://unpkg.com/react@18/umd/react.development.js"
-        ></script>
+    crossorigin
+    src="https://unpkg.com/react@18/umd/react.development.js"
+    ></script>
     <script 
-        crossorigin 
-        src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
-        ></script>
+    crossorigin 
+    src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
+    ></script>
+    <script src="app.js" ></script>
 </body>
 </html>
