--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>React-Fundas</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <div id="root" >
+    <div id="root">
         <h1>Hello World!</h1>
     </div>
-    <script type="module" src="./app.js"></script>
+    <script type="module" src="./App.js"></script>
 </body>
+
 </html>
