--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="root">
         <h1>Hello!!!</h1>
     </div>
-    <script type="module" src="./App.js"></script>
+    <script type="module" src="./App.jsx"></script>
 </body>
 
 </html>
